tests/snapshots/snapshots__pipeline@named_escape_return.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/named_escape_return.pr
---
== tokens ==
VOpen Effect UIdent("Ask") VOpen Ident("ask") LParen RParen Colon KwInt VClose VSemi Fn Ident("leak") LParen RParen Eq VOpen With Ident("f") LArrow Handler VOpen Ident("ask") LParen RParen Ident("resume") Ident("k") FatArrow Ident("k") LParen Int(IntLit { value: 5, suffix: None }) RParen VSemi Return Ident("r") FatArrow Ident("r") VClose VSemi Ident("f") VClose VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Int(IntLit { value: 0, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Ask",
            params: [],
            ops: [
                EffOp {
                    name: "ask",
                    params: [],
                    ret: Int,
                    grade: Many,
                },
            ],
            span: 135..159,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "leak",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Sugar(
                    NamedHandle(
                        "f",
                        Spanned {
                            node: Var(
                                "f",
                            ),
                            span: 240..241,
                        },
                        [
                            Op(
                                "ask",
                                [],
                                "k",
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "k",
                                            ),
                                            span: 215..216,
                                        },
                                        [
                                            Spanned {
                                                node: Int(
                                                    IntLit {
                                                        value: 5,
                                                        suffix: None,
                                                    },
                                                ),
                                                span: 217..218,
                                            },
                                        ],
                                    ),
                                    span: 215..219,
                                },
                            ),
                            Return(
                                "r",
                                Spanned {
                                    node: Var(
                                        "r",
                                    ),
                                    span: 236..237,
                                },
                            ),
                        ],
                    ),
                ),
                span: 175..241,
            },
            wheres: [],
            span: 161..241,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 255..262,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 0,
                                    suffix: None,
                                },
                            ),
                            span: 263..264,
                        },
                    ],
                ),
                span: 255..265,
            },
            wheres: [],
            span: 243..265,
        },
    ],
}

== types ==
[E6042] Type Error: handler instance `f` is not a value: call its operations as `f.op(...)`
    ╭─[ <source>:10:3 ]
    │
 10 │   f
    │   ┬  
    │   ╰── handler instance `f` is not a value: call its operations as `f.op(...)`
────╯
